--- a/app/src/main/res/drawable/crop_invoice_table_border.xml
+++ b/app/src/main/res/drawable/crop_invoice_table_border.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
-    <solid android:color="#ffffff" />
+    <solid android:color="#CFE8D8" />
     <stroke
         android:width="1dip"
-        android:color="@android:color/darker_gray" />
+        android:color="#CFE8D8" />
 </shape>
