--- a/app/src/main/res/layout/activity_crop_bill_manager.xml
+++ b/app/src/main/res/layout/activity_crop_bill_manager.xml
@@ -38,17 +38,23 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="0.6"
                             android:text="@string/supplier"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
+                            android:textColor="@color/textColor"
+                            android:textSize="12sp"
+                             />
 
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/input_shapes_grey_spinner"
+                            android:orientation="vertical"
+                            android:padding="2.4dp">
                         <Spinner
                             android:id="@+id/spinner_crop_bill_supplier"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/input_shapes"
                             android:hint="Select"
                             android:textSize="14sp" />
+                        </LinearLayout>
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -61,9 +67,9 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="0.6"
                             android:text="@string/bill_number"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
+                            android:textColor="@color/textColor"
+                            android:textSize="12sp"
+                             />
 
                         <TextView
                             android:id="@+id/txt_crop_bill_number"
@@ -90,9 +96,9 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="0.6"
                             android:text="@string/order_number"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
+                            android:textColor="@color/textColor"
+                            android:textSize="12sp"
+                             />
 
                         <EditText
                             android:id="@+id/txt_crop_bill_order_number"
@@ -114,15 +120,15 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="0.6"
                             android:text="@string/bill_date"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
+                            android:textColor="@color/textColor"
+                            android:textSize="12sp"
+                             />
 
                         <EditText
                             android:id="@+id/txt_crop_bill_date"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/input_shapes"
+                            android:background="@drawable/input_shapes_grey_spinner"
                             android:textColor="@color/blackText"
                             android:textSize="14sp"
                             android:hint="Select"/>
@@ -147,16 +153,16 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="0.6"
                             android:text="@string/due_date"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
+                            android:textColor="@color/textColor"
+                            android:textSize="12sp"
+                             />
 
                         <EditText
                             android:id="@+id/txt_crop_bill_due_date"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.4"
-                            android:background="@drawable/input_shapes"
+                            android:background="@drawable/input_shapes_grey_spinner"
                             android:hint="Select"
                             android:inputType="none"
                             android:textSize="14sp" />
@@ -173,9 +179,9 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="0.6"
                             android:text="@string/terms"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
+                            android:textColor="@color/textColor"
+                            android:textSize="12sp"
+                             />
 
                         <Spinner
                             android:id="@+id/txt_crop_bill_terms"
@@ -221,7 +227,7 @@
                                 >
 
                                 <LinearLayout
-                                    android:layout_width="100dp"
+                                    android:layout_width="150dp"
                                     android:layout_height="28dp"
                                     android:background="@drawable/crop_invoice_table_border"
                                     android:orientation="horizontal">
@@ -234,7 +240,8 @@
                                         android:gravity="center"
                                         android:text="@string/item_details_label"
                                         android:textSize="14sp"
-                                        android:textStyle="bold" />
+                                        android:textColor="@color/textColor"
+                                         />
                                 </LinearLayout>
 
                                 <LinearLayout
@@ -250,8 +257,9 @@
                                         android:background="@drawable/crop_invoice_table_border"
                                         android:gravity="center"
                                         android:text="@string/quantity"
-                                        android:textSize="16sp"
-                                        android:textStyle="bold" />
+                                        android:textColor="@color/textColor"
+                                        android:textSize="12sp"
+                                         />
                                 </LinearLayout>
 
                                 <LinearLayout
@@ -267,8 +275,9 @@
                                         android:background="@drawable/crop_invoice_table_border"
                                         android:gravity="center"
                                         android:text="@string/rate"
-                                        android:textSize="16sp"
-                                        android:textStyle="bold" />
+                                        android:textColor="@color/textColor"
+                                        android:textSize="12sp"
+                                         />
                                 </LinearLayout>
 
                                 <LinearLayout
@@ -283,13 +292,14 @@
                                         android:layout_height="match_parent"
                                         android:background="@drawable/crop_invoice_table_border"
                                         android:gravity="center"
+                                        android:textColor="@color/textColor"
                                         android:text="@string/label_tax"
-                                        android:textSize="16sp"
-                                        android:textStyle="bold" />
+                                        android:textSize="12sp"
+                                         />
                                 </LinearLayout>
 
                                 <LinearLayout
-                                    android:layout_width="@dimen/crop_estimate_small_column_size"
+                                    android:layout_width="150dp"
                                     android:layout_height="28dp"
                                     android:background="@drawable/crop_invoice_table_border"
                                     android:orientation="horizontal">
@@ -300,9 +310,10 @@
                                         android:layout_height="match_parent"
                                         android:background="@drawable/crop_invoice_table_border"
                                         android:gravity="center"
+                                        android:textColor="@color/textColor"
                                         android:text="@string/amount_label"
-                                        android:textSize="16sp"
-                                        android:textStyle="bold" />
+                                        android:textSize="12sp"
+                                         />
                                 </LinearLayout>
 
 
@@ -327,12 +338,11 @@
 
                 <Button
                     android:id="@+id/btn_add_item"
-                    style="@style/Button"
+                    style="@style/ButtonFinancial"
                     android:layout_width="wrap_content"
                     android:layout_height="45dp"
                     android:minWidth="1dp"
-                    android:backgroundTint="@color/colorPrimary"
-                    android:drawableLeft="@android:drawable/ic_input_add"
+                    android:backgroundTint="@color/textColor"
                     android:drawableTint="#ffffff"
                     android:textSize="14sp"
                     android:text="@string/label_add_item"
@@ -341,9 +351,8 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -354,20 +363,21 @@
 
                     <TextView
 
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
+                        android:layout_weight="0.7"
                         android:text="@string/sub_total"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="12sp"
+                         />
 
                     <TextView
 
                         android:id="@+id/txt_view_crop_bill_sub_total"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:gravity="end"
+                        android:layout_weight="0.3"
                         android:text="@string/default_numeric_value" />
 
                 </LinearLayout>
@@ -380,21 +390,20 @@
                     android:orientation="horizontal">
 
                     <TextView
-
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginRight="65dp"
                         android:text="@string/discount"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:layout_weight="0.4"
+                        android:textColor="@color/textColor"
+                        android:textSize="12sp"
+                         />
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:background="@color/gray_mh"
-
+                        android:layout_weight="0.3"
                         android:orientation="horizontal">
 
 
@@ -402,7 +411,7 @@
                             android:id="@+id/txt_crop_bill_discount_percentage"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.5"
+                            android:layout_weight="0.9"
                             android:background="@drawable/input_shapes"
                             android:ems="3"
                             android:hint="Enter.."
@@ -418,23 +427,26 @@
                             android:layout_weight="0.1"
                             android:gravity="center_vertical"
                             android:text="%"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginEnd="8dp"
                             android:textAlignment="center"
                             android:textSize="18sp"
-                            android:textStyle="bold"
+                            
 
                             />
 
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:gravity="end"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="0.3"
                         android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/txt_crop_bill_discount"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="end"
                             android:text="@string/default_numeric_value"/>
@@ -447,27 +459,27 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/input_shapes"
+                    android:background="@color/divider_line_color_estimates"
                     android:orientation="horizontal">
 
 
                     <TextView
                         android:id="@+id/textView"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
+                        android:layout_weight="0.5"
                         android:text="@string/total_ugx"
-
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="12sp"
+                         />
 
                     <TextView
-
                         android:id="@+id/txt_crop_bill_total"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:gravity="end"
+                        android:layout_weight="0.5"
+                        android:textColor="@color/textColor"
                         android:text="@string/default_numeric_value" />
 
                 </LinearLayout>
@@ -492,9 +504,9 @@
                         android:layout_gravity="start"
                         android:layout_marginRight="30dp"
                         android:text="@string/notes"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="12sp"
+                         />
 
                     <EditText
                         android:id="@+id/txt_crop_bill_notes"
@@ -515,21 +527,21 @@
                 android:layout_marginBottom="5dp">
                 <Button
                     android:id="@+id/btn_save"
-                    style="@style/Button"
+                    style="@style/ButtonFinancial"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/colorPrimary"
+                    android:backgroundTint="@color/textColor"
                     android:drawableTint="#ffffff"
                     android:text="Save "
                     android:textAllCaps="false"
                     android:textColor="#ffffff" />
                 <Button
                     android:id="@+id/btn_save_send"
-                    style="@style/Button"
+                    style="@style/ButtonFinancial"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/colorPrimary"
-                    android:drawableTint="#ffffff"
+                    android:backgroundTint="@color/textColor"
+
                     android:text="@string/save_send"
                     android:textAllCaps="false"
                     android:textColor="#ffffff" />
