--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="actionMenuTextAppearance">@style/MyMenuTextAppearance</item>
+        <item name="android:typeface">serif</item>
+        <!--<item name="android:typeface">@font/source_sans_pro_regular</item>-->
 
         <!--<item name="android:popupMenuStyle">@style/AppTheme.Popup</item>-->
     </style>
@@ -42,6 +44,10 @@
 
     <style name="Button" parent="Base.TextAppearance.AppCompat.Button">
         <item name="backgroundTint">@color/colorPrimary</item>
+    </style>
+
+    <style name="ButtonFinancial" parent="Base.TextAppearance.AppCompat.Button">
+        <item name="backgroundTint">@color/estimates_manager_button</item>
     </style>
 
     <style name="generalnotitle" parent="@android:style/Theme.Black.NoTitleBar.Fullscreen">
